welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: not found: value mathsAbs
  	return 2*mathsAbs(21-n)
                 ^diff21:4: error: not found: value mathsAbs
  return mathsAbs(21-n)
         ^