welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
  if (n>21)
  	return 2*mathsAbs(21-n)
  return mathsAbs(21-n)
}